Fix button text wrap

--- a/frontend/src/stylus/trees.styl
+++ b/frontend/src/stylus/trees.styl
@@ -10,3 +10,6 @@
 		justify-content center
 		align-items center
 
+		.v-btn__content
+			white-space normal
+
